White spaces fixing

--- a/RWD/css/gallery.css
+++ b/RWD/css/gallery.css
@@ -26,7 +26,8 @@ h3 {
 }
 
 img {
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .col-sm-12 {
